--- a/AppStoreRedesign/Base.lproj/Main.storyboard
+++ b/AppStoreRedesign/Base.lproj/Main.storyboard
@@ -17,12 +17,46 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="D89-YY-mAG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="9lm-DQ-In2"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1yH-dm-xKs"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oq2-TY-nwF">
+                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="56H-wm-iay"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="DwN-ll-CdG"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="D89-YY-mAG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="077-8d-chG"/>
+                            <constraint firstItem="D89-YY-mAG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="74g-pX-Djb"/>
+                            <constraint firstItem="oq2-TY-nwF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AFJ-ZT-aDQ"/>
+                            <constraint firstItem="oq2-TY-nwF" firstAttribute="top" secondItem="D89-YY-mAG" secondAttribute="bottom" id="G1C-cC-LqJ"/>
+                            <constraint firstItem="oq2-TY-nwF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Zlv-6y-5n0"/>
+                            <constraint firstItem="D89-YY-mAG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="obV-mI-inJ"/>
+                            <constraint firstItem="oq2-TY-nwF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="rrp-iK-cRw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="appTableView" destination="oq2-TY-nwF" id="0Xe-KU-S5A"/>
+                        <outlet property="searchBar" destination="D89-YY-mAG" id="gp3-Dh-Rpm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="141.59999999999999" y="103.89805097451276"/>
         </scene>
     </scenes>
 </document>
